add go mod files and gitlab ci file

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,7 @@ go:
 
 script:
   - go get github.com/stretchr/testify
+  - go get github.com/pkg/errors
   - go test -race -coverprofile=coverage.txt -covermode=atomic
 
 after_success:
